docs: update README entry points; finalize Dockerization docs and index

--- a/Postura_Live_Demo.ipynb
+++ b/Postura_Live_Demo.ipynb
@@ -188,6 +188,8 @@
       "source": [
         "**9) Open ngrok tunnel (authenticated)**\n",
         "\n",
+        "** Refer to /demo for test-samples **\n",
+        "\n",
         "Enter: **url/ui**\n"
       ]
     },
